Updated my project as per the PR reviews

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <p>Built with &hearts; by Kavya Gupta</p>
     </section>
 
-    <section class="filters">
+    <section class="filters" id="allFilters">
       <button data-category="all">All</button>
       <button data-category="electronics">Electronics</button>
       <button data-category="fashion">Fashion</button>
@@ -26,9 +26,7 @@
       <button data-category="groceries">Groceries</button>
       <button data-category="books">Books</button>
       <button data-category="furniture">Furniture</button>
-      <button data-category="beauty&personalCare">
-        Beauty & Personal Care
-      </button>
+      <button data-category="personal-care">Personal Care</button>
     </section>
 
     <main id="productContainer" class="products"></main>
@@ -49,10 +47,9 @@
         <div class="footer-section">
           <h4>Quick Links</h4>
           <ul>
+            <!-- These are some quick links to go to particular section on the page -->
             <li><a href="#">Home</a></li>
-            <li><a href="#">All Products</a></li>
-            <li><a href="#">Cart</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#allFilters">All Products</a></li>
           </ul>
         </div>
         <div class="footer-section">
