--- a/index.html
+++ b/index.html
@@ -72,6 +72,6 @@
         <p>© 2026 EasyBuy®.</p>
       </div>
     </footer>
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
